# swing-trading-app

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  ai_credentials.py  ai_reviews.py  bhavcopy.py  candlesticks.py  config.py  crypto.py  data_maintenance.py  data_quality.py  demo_automation.py  demo_trading.py  dhan_client.py  discipline.py  drishti.py  historical_data.py  index_universe.py  instrument_master.py  learning.py  main.py  matsya_api.py  ml_data_integrity.py  ml_dataset.py  ml_dataset_v3_anatomy.py  ml_foundation.py  ml_samples.py  move_events.py  nse_import.py  paper_trading_report.py  range_movers.py  regime.py  reversal_opportunities.py  scheduler.py  schemas.py  shadow_tracking.py  store.py  support_resistance.py  timezone.py  token_service.py  trading_journal.py  watchlist.py
backend/scripts/: backtest_mtf_weekly_trap.py  initialize_paper_continuity.py  matsya_fetch_ohlcv.py  matsya_generate_latest_regime_v3_snapshot.py  matsya_import_instruments.py  matsya_import_universe.py  matsya_init_db.py  matsya_intraday_db.py  matsya_intraday_paper_worker.py  matsya_latest_regime_v3_worker.py  matsya_load_kurma_varaha_dry_run.py  matsya_ohlcv_worker.py  matsya_renewal_worker.py  matsya_score_kurma_varaha_dry_run.py  matsya_status.py  matsya_token_profile.py  matsya_validate_kurma_varaha_artifacts.py  matsya_virtual_demo_smoke.py  paper_trader_continuity.py  reconstruct_paper_ledger.py  run_uptrend_sideways_paper_trader_once.py  run_v8_demo_trader_once.py  v7b_daily_health_check.py  v7b_matsya_forward_paper_logger.py  v8_demo_trader.py
backend/tests/: test_ai_credentials.py  test_ai_reviews.py  test_analyze_entry_failures.py  test_analyze_entry_risk_markers.py  test_analyze_kurma2_thresholds.py  test_analyze_shadow_intelligence.py  test_audit_ml_data_integrity.py  test_audit_training_reproducibility.py  (+87 more)
(+153 files in other folders)
