[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "swing-trading-backend"
version = "0.1.0"
description = "Dhan token status and renewal backend"
requires-python = ">=3.12"
dependencies = [
  "cryptography>=43.0.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "joblib>=1.3.0",
  "pandas>=2.0.0",
  "pydantic-settings>=2.6.0",
  "scikit-learn>=1.3.0",
  "tzdata>=2026.1",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
